WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
42172
[chromium] Tabbing away after you highlight an autofill entry results in the label for the autofill profile getting included in the field
https://bugs.webkit.org/show_bug.cgi?id=42172
Summary
[chromium] Tabbing away after you highlight an autofill entry results in the ...
Scott Violet
Reported
2010-07-13 09:28:26 PDT
1. Go to "options -> personal stuff -> change autofill settings" and create an address profile with the label "Home". Let the name be "John Doe" 2. Navigate to a web page with name and address fields. 3. Click in the empty first name field on the web page. 4. Hit the down arrow key on your keyboard until "John (Home)" is highlighted. 5. Hit the tab key on your keyboard to move to the next field. What is the expected output? The first name field is filled with the text "John". What do you see instead? The first name field is filled with the text "John (Home)". Additional information: If you click on "John (Home)" with your mouse, the correct name is entered in the first name field. It is only when you tab away from the selection that the label gets added to the name. It looks like the Autofill++ entry is being treated like an Autofill classic entry when you tab away from the field.
Attachments
Makes tab commit selection
(1.46 KB, patch)
2010-07-13 10:22 PDT
,
Scott Violet
levin
: review-
levin
: commit-queue-
Details
Formatted Diff
Diff
Fixes style nits and adds correct reviewer.
(1.46 KB, patch)
2010-07-13 10:39 PDT
,
Scott Violet
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Scott Violet
Comment 1
2010-07-13 10:22:00 PDT
Created
attachment 61391
[details]
Makes tab commit selection
WebKit Review Bot
Comment 2
2010-07-13 10:24:16 PDT
Attachment 61391
[details]
did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebCore/platform/chromium/PopupMenuChromium.cpp:756: One space before end of line comments [whitespace/comments] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Levin
Comment 3
2010-07-13 10:37:25 PDT
Comment on
attachment 61391
[details]
Makes tab commit selection r=me with two minor fixes to the comment: 1.Capitalize the first letter in the comment. 2.Only one space before the comment as the style bot noted. (r- only b/c you aren't a committer.)
Scott Violet
Comment 4
2010-07-13 10:39:11 PDT
Created
attachment 61394
[details]
Fixes style nits and adds correct reviewer.
WebKit Commit Bot
Comment 5
2010-07-13 12:57:04 PDT
Comment on
attachment 61394
[details]
Fixes style nits and adds correct reviewer. Clearing flags on attachment: 61394 Committed
r63236
: <
http://trac.webkit.org/changeset/63236
>
WebKit Commit Bot
Comment 6
2010-07-13 12:57:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug