2010-07-13  Scott Violet  <sky@chromium.org>

Reviewed by David Levin.

        [Chromium] Makes pressing tab accept the currently selected item in a popup.
        https://bugs.webkit.org/show_bug.cgi?id=42172

        * WebCore/platform/chromium/PopupMenuChromium.cpp:

Canonical link: https://commits.webkit.org/54092@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@63236 268f45cc-cd09-0410-ab3c-d52691b4dbfc